# visiualization

./: .gitignore  README.md  pyproject.toml
104人力銀行_職業探索_JobCat/: 104人力銀行_職業探索.mmd  104人力銀行_職業探索_(20250609).csv  104人力銀行_職業探索_JobCat_skill_mind_map_20250609.html  104人力銀行_職業探索_JobCat_skill_network_20250609.html  104人力銀行_職業探索_JobCat_skill_tool.ipynb  104人力銀行_職業探索_JobCat_skill_tool_vis.ipynb
互動式樹狀結構/: tree_map.ipynb
